--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -4,68 +4,113 @@ on:
     branches: main
   pull_request:
     branches: main
+  schedule:
+    - cron: '0 16 * * *'
+  workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
+    steps:
+      - name: Harden Runner
+        uses: step-security/harden-runner@63c24ba6bd7ba022e95695ff85de572c04a18142 # v2.7.0
+        with:
+          disable-sudo: true
+          egress-policy: audit
+
+      - name: Checkout repository
+        uses: actions/checkout@9bb56186c3b09b4f86b1c65136769dd318469633 # v4.1.2
+      - name: Set up JDK 17
+        uses: actions/setup-java@99b8673ff64fbf99d8d325f52d9a5bdedb8483e9 # v4.2.1
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+          cache: 'gradle'
+
+      - name: Chmod
+        run: chmod +x ./gradlew
+
+      - name: Build with Gradle
+        uses: gradle/gradle-build-action@29c0906b64b8fc82467890bfb7a0a7ef34bda89e # v2.11.0
+        with:
+          arguments: build -x test --scan
+
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Harden Runner
+        uses: step-security/harden-runner@63c24ba6bd7ba022e95695ff85de572c04a18142 # v2.7.0
+        with:
+          disable-sudo: true
+          egress-policy: audit
+
+      - name: Checkout repository
+        uses: actions/checkout@9bb56186c3b09b4f86b1c65136769dd318469633 # v4.1.2
+      - name: Set up JDK 17
+        uses: actions/setup-java@99b8673ff64fbf99d8d325f52d9a5bdedb8483e9 # v4.2.1
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+          cache: 'gradle'
+
+      - name: Testspace Setup CLI
+        uses: testspace-com/setup-testspace@ee1482f978eb5010ec27b6f6372904f01f2edd68 # v1.0.6
+        with:
+          domain: ${{ github.repository_owner }}
+
+      - name: Chmod
+        run: chmod +x ./gradlew
+
+      - name: Test with Gradle
+        uses: gradle/gradle-build-action@29c0906b64b8fc82467890bfb7a0a7ef34bda89e # v2.11.0
+        with:
+          arguments: test -DiHubTest.failFast=true
+
+      - name: Upload Coverage Reports
+        if: ${{ github.repository_owner == 'ihub-pub' }}
+        uses: codecov/codecov-action@54bcd8715eee62d40e33596ef5e8f0f48dbbccab # v4.1.0
+
+      - name: Publish Results to Testspace
+        run: testspace */build/test-results/test/*.xml */build/reports/*/test/*.xml
+
+      - name: Upload Test Result
+        if: ${{ failure() }}
+        uses: actions/upload-artifact@5d5d22a31266ced268874388b861e4b58bb5c2f3 # v4.3.1
+        with:
+          name: tests
+          path: |
+            */build/reports/tests
+          retention-days: 1
+
+  publish:
+    if: ${{ github.event_name == 'push' && github.repository_owner == 'ihub-pub' }}
+    needs: build
+    name: Publish to Snapshot Repository
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        java_version: [ 11, 17 ]
+        java_version: [ 17 ]
     steps:
-      - uses: actions/checkout@main
+      - name: Harden Runner
+        uses: step-security/harden-runner@63c24ba6bd7ba022e95695ff85de572c04a18142 # v2.7.0
+        with:
+          disable-sudo: true
+          egress-policy: audit
+
+      - name: Checkout repository
+        uses: actions/checkout@9bb56186c3b09b4f86b1c65136769dd318469633 # v4.1.2
+        with:
+          fetch-depth: 0
       - name: Set up JDK ${{ matrix.java_version }}
-        uses: actions/setup-java@main
+        uses: actions/setup-java@99b8673ff64fbf99d8d325f52d9a5bdedb8483e9 # v4.2.1
         with:
           java-version: ${{ matrix.java_version }}
           distribution: 'adopt'
           cache: 'gradle'
 
-      - name: Build with Gradle
-        run: gradle build
-
-  analyze:
-    name: Analyze
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        java_version: [ 11, 17 ]
-    permissions:
-      actions: read
-      contents: read
-      security-events: write
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@main
-
-      - name: Set up JDK ${{ matrix.java_version }}
-        uses: actions/setup-java@main
+      - name: Publish to Snapshot Repository
+        uses: ihub-pub/bot/publish@589999ea8b8b2801650a3596a7477db0399bee09 # v2.0.0
         with:
-          java-version: ${{ matrix.java_version }}
-          distribution: 'adopt'
-
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@main
-
-      - name: Autobuild
-        uses: github/codeql-action/autobuild@main
-
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@main
-
-  dependency-review:
-    if: ${{ github.event_name == 'pull_request' }}
-    permissions:
-      contents: read
-    name: Dependency Review Scan
-    runs-on: ubuntu-latest
-    steps:
-      - name: 'Checkout Repository'
-        uses: actions/checkout@main
-      - name: 'Dependency Review'
-        uses: actions/dependency-review-action@main
-
-  validation:
-    name: Validate Gradle Wrapper
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@main
-      - uses: gradle/wrapper-validation-action@main
+          repoUsername: ${{ secrets.REPO_USERNAME }}
+          repoPassword: ${{ secrets.REPO_PASSWORD }}
+          useInferringVersion: true
