--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,30 @@
+#
+# Copyright (c) 2024 the original author or authors.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     https://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
 org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.configureondemand=true
 org.gradle.daemon=false
 org.gradle.daemon.performance.enable-monitoring=false
 
-name=demo
-group=pub.ihub.demo
-
-iHubSettings.includeDirs=rest,service,client
+# Project
+name=ihub-integrations
+group=pub.ihub.integration
+iHubSettings.includeBom=ihub-bom
+iHub.snapshotRepoUrl=https://s01.oss.sonatype.org/content/repositories/snapshots/
+iHub.releaseRepoUrl=https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/
+iHub.mavenPrivateEnabled=false
+iHubJava.defaultDependencies=false
+#iHubJavaagent.javaagent=pub.ihub.integration:ihub-agent:main-SNAPSHOT
