--- a/.github/workflows/gradle-dependency-graph.yml
+++ b/.github/workflows/gradle-dependency-graph.yml
@@ -16,16 +16,22 @@ jobs:
       contents: write
     steps:
       - name: Harden Runner
-        uses: step-security/harden-runner@eb238b55efaa70779f274895e782ed17c84f2895 # v2.6.1
+        uses: step-security/harden-runner@63c24ba6bd7ba022e95695ff85de572c04a18142 # v2.7.0
         with:
           disable-sudo: true
           egress-policy: audit
 
       - name: Checkout
-        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+        uses: actions/checkout@9bb56186c3b09b4f86b1c65136769dd318469633 # v4.1.2
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@main
+        with:
+          java-version: 17
+          distribution: 'adopt'
 
       - name: Setup Gradle to generate and submit dependency graphs
-        uses: gradle/gradle-build-action@982da8e78c05368c70dac0351bb82647a9e9a5d2 # v2.11.1
+        uses: gradle/gradle-build-action@v3.1.0
         with:
           dependency-graph: generate-and-submit
           arguments: dependencies
