--- a/gradle.properties
+++ b/gradle.properties
@@ -14,6 +14,7 @@
 # limitations under the License.
 #
 org.gradle.parallel=true
+#org.gradle.workers.max=6
 org.gradle.caching=true
 org.gradle.configureondemand=true
 org.gradle.daemon=false
@@ -28,3 +29,6 @@ iHub.releaseRepoUrl=https://s01.oss.sonatype.org/service/local/staging/deploy/ma
 iHub.mavenPrivateEnabled=false
 iHubJava.defaultDependencies=false
 #iHubJavaagent.javaagent=pub.ihub.integration:ihub-agent:main-SNAPSHOT
+
+#TODO
+iHubSettings.skippedDirs=ihub-demo,ihub-agent-plugin
