--- a/gradle.properties
+++ b/gradle.properties
@@ -14,11 +14,12 @@
 # limitations under the License.
 #
 org.gradle.parallel=true
-#org.gradle.workers.max=6
+org.gradle.workers.max=6
 org.gradle.caching=true
 org.gradle.configureondemand=true
 org.gradle.daemon=false
 org.gradle.daemon.performance.enable-monitoring=false
+org.gradle.configuration-cache.parallel=true
 
 # Project
 name=ihub-integrations
