--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,10 @@
 incap = '1.0.0'
 
 [libraries]
+# bom libs
+guice-bom = { module = 'com.google.inject:guice-bom', version = '7.0.0' }
+asm-bom = { module = 'org.ow2.asm:asm-bom', version = '9.7.1' }
+
 auto-service = { module = 'com.google.auto.service:auto-service', version = '1.1.1' }
 compile-testing = { module = 'com.google.testing.compile:compile-testing', version = '0.21.0' }
 incap = { module = 'net.ltgt.gradle.incap:incap', version.ref = 'incap' }
